--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,31 @@
+-i https://pypi.org/simple
+brotli==1.0.9
+certifi==2023.5.7 ; python_version >= '3.6'
+cffi==1.15.1 ; platform_python_implementation == 'CPython' and sys_platform == 'win32'
+charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
 click==7.1.2
-Flask==1.1.2
+configargparse==1.5.3 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+coverage==7.2.6
+flask==1.1.2
+flask-basicauth==0.2.0
+flask-cors==3.0.10
+gevent==22.10.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+geventhttpclient==2.0.9
+greenlet==2.0.2 ; platform_python_implementation == 'CPython'
+idna==3.4 ; python_version >= '3.5'
 itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+jinja2==2.11.2
+locust==1.6.0
+markupsafe==1.1.1
+msgpack==1.0.5
+psutil==5.9.5 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pycparser==2.21
+pywin32==306 ; sys_platform == 'win32'
+pyzmq==25.0.2 ; python_version >= '3.6'
+requests==2.31.0 ; python_version >= '3.7'
+setuptools==67.8.0 ; python_version >= '3.7'
+six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+urllib3==2.0.2 ; python_version >= '3.7'
+werkzeug==1.0.1
+zope.event==4.6
+zope.interface==6.0 ; python_version >= '3.7'
